- pngwolf-zopli 1.1.1 - https://github.com/jibsen/pngwolf-zopfli
- rehuff - http://wiki.xiph.org/Rehuff
- Tidy 5.2.0 - http://tidy.sourceforge.net
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.92 - http://upx.sourceforge.net
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


X.XX - YYYY/MM/DD
- Updated pingo to 0.53.
- Updated pngquant to 2.8.1.


9.50 - 2017/01/10
- Fixed a regression since FileOptimizer 9.30, that could avoid some plugin optimizations to not being applied (Armin Mueller, signalman).
- Fixed a bug when LogLevel was 4, when Optimized Size could be reported as 0 bytes in some situations.
- Updated pingo to 0.52c.
- Updated ImageMagick 7.0.4.3 with HDRI support.
- Some minor optimizations and code cleanup.

9.40 - 2017/01/06
- Added INI setting PDFSkipLayered=false to skip processing of PDF containing layers Optional Content Groups -OCG- (Grahame Bevan).
- Implemented using Win64 plugins in all Win64 system, even if you run Win32 version of FileOptimizer.
- Added removing metadata in pngquant if PNGCopyMetadata is disabled.
- Added Guetzli to the JPEG tool chain when allow lossy compression is enabled (Jyrki Alakuijala).
- Added pingo to the JPEG and PNG toolchains when copy metadata is disabled.
- Reenabled Leanify in JPEG processing when Copy Metadata is enabled, because now we can use --jpeg-keep-all-metadata.
- Fixed crashing with temporary paths longer than 260 characters (Roman Luks).
- Updated pingo to 0.52.
- Updated libwebp to 0.5.2.
- Updated UPX to 3.92.
- Updated Leanify to 0.4.3.173 daily binaries.
- Updated pngquant to 2.8.0.
- Updated to mutool 1.10a with x64 native build (thanks Dirk Paehl).
- Updated ImageMagick 7.0.4.2 with HDRI support.
- Better performance updating to ASMLib 2.51 with AVX512 support.
- Updated to cppcheck 1.77.
- Updated to NSIS 3.01.
- Some minor optimizations and code cleanup.

9.30 - 2016/11/26